--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -4,7 +4,7 @@ env:
   CAPROVER_APP: test
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   workflow_dispatch:
 jobs:
   build_and_push:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout the repo 
         uses: actions/checkout@v4
         with:
-         ref: caper
+         ref: main
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
