--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           mvn -B package --file pom.xml  -Dmaven.test.skip -DskipTests=true
           mkdir dist
-          cp -f target dist/
+          cp -r target dist/
           cp captain-definition dist/.
           cp Dockerfile dist/.
       - uses: a7ul/tar-action@v1.2.0
