--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build with Maven
         run: |
           mvn -B package --file pom.xml  -Dmaven.test.skip -DskipTests=true
-          mkdir dist
+          mkdir -p dist/target/quarkus-app/
           cp -r target/quarkus-app/ dist/target/quarkus-app/
           cp captain-definition dist/.
           cp src/main/docker/Dockerfile.jvm dist/Dockerfile
